src/tests/resources/players/invalid/wrongNumberArguments_1.players
01 Андрей Иванов B ;
02 Артем Петров M ;
03 Слава Трубицин M ;
04 Света Прищенко G ;
05 Маша Ивановская Д ;
06 Катя Попова W ;